# FlamRealTimeEdgeDetection

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  README.md  local.properties.template  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/assessment/edgeviewer/: MainActivity.kt  NativeProcessor.kt
app/src/main/java/com/assessment/edgeviewer/gl/: GLRenderer.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/include/: native_processor.h
app/src/main/jni/src/: jni_bridge.cpp  native_processor.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
screenshots/: README.md
web/: .gitignore  index.html  package.json  styles.css
web/src/: edgeDetection.ts  frameViewer.ts  index.ts  mockAPI.ts  statsManager.ts
